some improvements && add new streak 2HT more than 1HT

--- a/25GoalLines.html
+++ b/25GoalLines.html
@@ -65,7 +65,7 @@
   <section class="u-align-center u-clearfix u-grey-10 u-section-1" id="sec-e6e8">
     <div class="u-clearfix u-sheet u-sheet-1"
       style="max-width:55%; max-height:55%; margin-top: 7%; margin-bottom: 5%;">
-      <h4 class="u-text u-text-default u-text-1" style="text-shadow: none; text-align: center; margin-bottom: 4%;">2,5 Goal Lines</h4>
+      <h4 class="u-text u-text-default u-text-1" style="text-shadow: none; text-align: center; margin-bottom: 4%;">2,5 Goal Lines (discontinued)</h4>
       <div class="u-border-1 u-border-grey-75 u-container-style u-group u-radius-30 u-shape-round u-white u-group-1">
         <div class="u-container-layout u-container-layout-1" style="
         padding-top: 20px;
@@ -145,7 +145,7 @@
   </section>
   <section class="u-align-center u-clearfix u-grey-10 u-section-3" id="sec-9862">
 
-    <div class="u-clearfix u-sheet u-sheet-1" id="betsList" style="margin-bottom: 50px;">
+    <!-- <div class="u-clearfix u-sheet u-sheet-1" id="betsList" style="margin-bottom: 50px;">
       <p class="u-text u-text-default u-text-1"></p>
       <div
         class="u-align-center-sm u-align-center-xs u-border-2 u-border-black u-border-no-left u-border-no-right u-form u-form-1"
@@ -163,16 +163,16 @@
             <input type="submit" value="submit" class="u-form-control-hidden">
           </div>
         </form>
-      </div>
+      </div> -->
 
-      <button type="button"
+      <!-- <button type="button"
         class="collapsible u-btn u-btn-round u-btn-submit u-button-style u-custom-font u-font-source-sans-pro u-palette-3-dark-2 u-radius-18 u-btn-1"
         style="margin-top: 50px; overflow: hidden; max-width: 90%; background-color: #4b6256;">Next Matches
         To Bet</button>
 
       <div class="content 25nextMatchesDiv" style="max-width: 90%;margin-left: auto;margin-right: auto;">
-        <!-- <iframe class="u-expanded-width teamDataSheet" height="280" frameborder="0" scrolling="no" src="">
-      </iframe> -->
+        <iframe class="u-expanded-width teamDataSheet" height="280" frameborder="0" scrolling="no" src="">
+      </iframe>
 
       </div>
       <script>
@@ -190,7 +190,7 @@
             }
           });
         }
-      </script>
+      </script> -->
 
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <div class="u-align-center u-list u-list-1">
