--- a/LongStreaks.html
+++ b/LongStreaks.html
@@ -237,6 +237,13 @@
             <input type="submit" value="submit" class="u-form-control-hidden">
           </div>
         </li>
+        <li style="display: inline-block; margin-right: 10px;">
+          <div class="u-align-center u-form-group u-form-submit">
+            <a onclick="changeHeadCell('No 2HT > 1HT')"
+              class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-custom-font u-font-source-sans-pro u-palette-3-dark-2 u-radius-18 u-btn-1">No 2HT > 1HT</a>
+            <input type="submit" value="submit" class="u-form-control-hidden">
+          </div>
+        </li>
         <!-- <li style="display: inline-block; margin-right: 10px;"> <div class="u-align-center u-form-group u-form-submit">
               <a onclick="changeHeadCell('-1.5 Goals 1st Half')"
                 class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-custom-font u-font-source-sans-pro u-palette-3-dark-2 u-radius-18 u-btn-1">-1.5 Goals 1st Half</a>
