--- a/index.html
+++ b/index.html
@@ -88,6 +88,12 @@
             </div>
           </div>
           <div class="u-container-style u-list-item u-repeater-item">
+            <div class="u-container-layout u-similar-container u-container-layout-1" data-href="LongStreaks.html">
+              <a
+                class="u-align-center u-border-none u-btn u-btn-round u-button-style u-custom-font u-font-source-sans-pro u-hover-palette-4-dark-2 u-palette-3-dark-1 u-radius-50 u-btn-1" style="width: 300px !important;">Long Streaks</a>
+            </div>
+          </div>
+          <div class="u-container-style u-list-item u-repeater-item">
             <div class="u-container-layout u-similar-container u-container-layout-1" data-href="Bankrolls.html">
               <a
                 class="u-align-center u-border-none u-btn u-btn-round u-button-style u-custom-font u-font-source-sans-pro u-hover-palette-4-dark-2 u-palette-3-dark-1 u-radius-50 u-btn-1" style="width: 300px !important;">Bankrolls</a>
