update new core url

--- a/Bankrolls.html
+++ b/Bankrolls.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/Bankrolls.css" media="screen">
   <script class="u-script" type="text/javascript" src="javascript/jquery.js" "="" defer=""></script>
     <script class=" u-script" type="text/javascript" src="javascript/nicepage.js" "="" defer=""></script>
-    <script class=" u-script" type="text/javascript" src="javascript/constants.js"></script>
+    <script class=" u-script" type="text/javascript" src="javascript/common/constants.js"></script>
     <script class="u-script" type="text/javascript" src="javascript/common/coreAPIcalls.js" defer=""></script>
     <script class=" u-script" type="text/javascript" src="javascript/Bankrolls.js" "="" defer=""></script>
     <script class="u-script" type="text/javascript" src="javascript/header.js" defer=""></script>
