--- a/TeamInfoPage.html
+++ b/TeamInfoPage.html
@@ -14,7 +14,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script class="u-script" type="text/javascript" src="javascript/jquery.js" "="" defer=""></script>
   <script class=" u-script" type="text/javascript" src="javascript/nicepage.js" "="" defer=""></script>
-  <script class=" u-script" type="text/javascript" src="javascript/constants.js"></script>
+  <script class=" u-script" type="text/javascript" src="javascript/common/constants.js"></script>
   <script class=" u-script" type="text/javascript" src="javascript/common/sortTables.js"></script>
   <link rel="stylesheet" href="css/modalDialogBox.css" media="screen">
   <script class="u-script" type="text/javascript" src="javascript/common/modalDialogBox.js" defer=""></script>
@@ -75,7 +75,7 @@
       <h4 class="u-text u-text-default u-text-1 teamNameTitle" style="text-shadow: none;"></h4>
       <!-- <h3 class="u-text u-text-default u-text-1">Team Name</h3> -->
 
-      <button type="button"
+      <!-- <button type="button"
       class="collapsible u-btn u-btn-round u-btn-submit u-button-style u-custom-font u-font-source-sans-pro u-palette-3-dark-2 u-radius-18 u-btn-1"
       style="margin-top: 50px; overflow: hidden; max-width: 50%; background-color: #4b6256;">Historical Stats Data</button>
 
@@ -98,7 +98,7 @@
             }
           });
         }
-      </script>
+      </script> -->
 
       <canvas id="graphTeam"
         style="max-width:60%; max-height:20%; background-color: white; width: 70%; margin: 50px auto;"></canvas>
