--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script class="u-script" type="text/javascript" src="javascript/jquery.js" "="" defer=""></script>
   <script class="u-script" type="text/javascript" src="javascript/header.js" defer=""></script>
   <script class=" u-script" type="text/javascript" src="javascript/nicepage.js" "="" defer=""></script>
-  <script class=" u-script" type="text/javascript" src="javascript/constants.js" defer=""></script>
+  <script class=" u-script" type="text/javascript" src="javascript/common/constants.js" defer=""></script>
   <script class="u-script" type="text/javascript" src="javascript/index.js" defer=""></script>
   <meta name=" generator" content="Nicepage 4.16.0, nicepage.com">
   <link id="u-theme-google-font" rel="stylesheet"
