--- a/25GoalLines.html
+++ b/25GoalLines.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/StrategyPage.css" media="screen">
   <script class="u-script" type="text/javascript" src="javascript/jquery.js" "="" defer=""></script>
   <script class=" u-script" type="text/javascript" src="javascript/nicepage.js" "="" defer=""></script>
-  <script class=" u-script" type="text/javascript" src="javascript/constants.js" defer=""></script>
+  <script class=" u-script" type="text/javascript" src="javascript/common/constants.js" defer=""></script>
   <script class="u-script" type="text/javascript" src="javascript/header.js" defer=""></script>
   <script type="text/javascript">
     var currentStrategy = 4;
