--- a/Bets-Page.html
+++ b/Bets-Page.html
@@ -15,7 +15,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script class="u-script" type="text/javascript" src="javascript/jquery.js" "="" defer=""></script>
   <script class=" u-script" type="text/javascript" src="javascript/nicepage.js" "="" defer=""></script>
-  <script class=" u-script" type="text/javascript" src="javascript/constants.js"></script>
+  <script class=" u-script" type="text/javascript" src="javascript/common/constants.js"></script>
   <script class="u-script" type="text/javascript" src="javascript/header.js" defer=""></script>
   <script class="u-script" type="text/javascript" src="javascript/common/coreAPIcalls.js" defer=""></script>
   <script class="u-script" type="text/javascript" src="javascript/common/moment.js" defer=""></script>
