some improvs && add scroll button

--- a/HistoricStatsData.html
+++ b/HistoricStatsData.html
@@ -60,6 +60,8 @@
   <script class="u-script" type="text/javascript" src="javascript/common/coreAPIcalls.js" defer=""></script>
   <script class=" u-script" type="text/javascript" src="javascript/HistoricStats.js" "="" defer=""></script>
   <script class="u-script" type="text/javascript" src="javascript/header.js" defer=""></script>
+  <script class="u-script" type="text/javascript" src="javascript/common/scrollTopButton.js" defer=""></script>
+  <script class="u-script" type="text/javascript" src="javascript/common/modalDialogBox.js" defer=""></script>
   <meta name=" generator" content="Nicepage 4.16.0, nicepage.com">
   <link id="u-theme-google-font" rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
@@ -262,8 +264,9 @@
           </thead>
           <tbody id="hockeyStatsTeamsTableBody" class="u-align-left u-custom-font u-font-source-sans-pro u-table-alt-grey-15 u-table-body">
           </tbody>
-        </table>
+        </table>      
       </div>
+      <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     </div>
   </section>
 
