--- a/Margin-Wins.html
+++ b/Margin-Wins.html
@@ -84,6 +84,7 @@
               <option value="2022-23">2022/23</option>
               <option value="2023">2023</option>
               <option value="2023-24">2023/24</option>
+              <option value="2024-25">2024/25</option>
             </select>
           </form>
         </div>
