--- a/Simulation-Matches.html
+++ b/Simulation-Matches.html
@@ -19,6 +19,8 @@
     var currentStrategy = DRAWS_HUNTER_ID;
   </script>
         <link rel="stylesheet" href="css/modalDialogBox.css" media="screen">
+        <link rel="stylesheet" href="css/scrollTopButton.css" media="screen">
+        <script class="u-script" type="text/javascript" src="javascript/common/scrollTopButton.js" defer=""></script>
         <script class="u-script" type="text/javascript" src="javascript/common/modalDialogBox.js" defer=""></script>
   <script class="u-script" type="text/javascript" src="javascript/common/coreAPIcalls.js" defer=""></script>
   <script class=" u-script" type="text/javascript" src="javascript/SimulationMatchesBySeason.js" "="" defer=""></script>
@@ -155,6 +157,7 @@
         </form>
       </div>
     <div class="sim-matches-strategies" style="margin-top: 3%;"></div>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">↑</button>
     </div>
   </section>
 
