add link button to historic data in long streaks team rows

--- a/LongStreaks.html
+++ b/LongStreaks.html
@@ -260,16 +260,19 @@
         <table class="u-table-entity" id="longStreaksTeamsTable"
           style="width: 65%; margin-left: auto; margin-right: auto;">
           <colgroup>
-            <col width="25%">
+            <col width="3%">
+            <col width="22%">
             <col width="10%">
             <col width="15%">
             <col width="15%">
           </colgroup>
           <thead class="u-custom-font u-font-source-sans-pro u-grey-50 u-table-header u-table-header-1">
             <tr>
-              <th id="longStreaksHeadCell" style="text-align: center;" colspan="4">-</th>
+              <th id="longStreaksHeadCell" style="text-align: center;" colspan="5">-</th>
             </tr>
             <tr style="height: 40px;">
+              <th class="u-table-cell"
+                style="padding-top: 0; padding-bottom: 0; position: sticky; left: 0;"></th>
               <th onclick="sortTable(0,'footballTableStreaks')" class="u-table-cell"
                 style="padding-top: 0; padding-bottom: 0; position: sticky; left: 0;">TEAM</th>
               <th onclick="sortTableNumbers(1,'footballTableStreaks')" class="u-table-cell"
