--- a/HistoricStatsData.html
+++ b/HistoricStatsData.html
@@ -45,7 +45,7 @@
   </style>
 
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta charset="utf-8">
   <meta name="keywords" content="">
   <meta name="description" content="">
