turn getHistoricTeams call into an async function

--- a/HistoricStatsData.html
+++ b/HistoricStatsData.html
@@ -42,6 +42,45 @@
   .subnav:hover .subnav-content {
     display: block;
   }
+
+  /* Style for the loading overlay */
+#loading {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent white background */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000; /* Ensure it is on top of all content */
+}
+
+/* Loader animation */
+.loader {
+    border: 12px solid #f3f3f3; /* Light gray */
+    border-top: 12px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    animation: spin 2s linear infinite;
+}
+
+/* Spin animation */
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+/* Initially, hide the loading element */
+#loading.hidden {
+    display: none;
+}
   </style>
 
 <head>
@@ -96,6 +135,9 @@
   <meta property="og:type" content="website">
 </head>
 
+<div id="loading">
+  <div class="loader"></div>
+</div>
 <body class="u-body u-overlap u-xl-mode" data-lang="en">
   <header class="u-clearfix u-header u-sticky u-header" id="sec-3764">
     <div class="u-clearfix u-sheet u-sheet-1" id="header-sec">
