change sessionStorage to localStorage

--- a/HistoricStatsData.html
+++ b/HistoricStatsData.html
@@ -97,6 +97,7 @@
   <script class=" u-script" type="text/javascript" src="javascript/common/constants.js"></script>
   <script class=" u-script" type="text/javascript" src="javascript/common/sortTables.js"></script>
   <script class="u-script" type="text/javascript" src="javascript/common/coreAPIcalls.js" defer=""></script>
+  <script class="u-script" type="text/javascript" src="javascript/common/indexedDB.js" defer=""></script>
   <script class=" u-script" type="text/javascript" src="javascript/HistoricStats.js" "="" defer=""></script>
   <script class="u-script" type="text/javascript" src="javascript/header.js" defer=""></script>
   <script class="u-script" type="text/javascript" src="javascript/common/scrollTopButton.js" defer=""></script>
