test localStorage in iPhone

--- a/HistoricStatsData.html
+++ b/HistoricStatsData.html
@@ -136,7 +136,7 @@
   <meta property="og:type" content="website">
 </head>
 
-<div id="loading">
+<div id="loading" class="hidden">
   <div class="loader"></div>
 </div>
 <body class="u-body u-overlap u-xl-mode" data-lang="en">
