--- a/LongStreaks.html
+++ b/LongStreaks.html
@@ -98,6 +98,7 @@
   <script class=" u-script" type="text/javascript" src="javascript/common/constants.js"></script>
   <script class=" u-script" type="text/javascript" src="javascript/common/sortTables.js"></script>
   <script class="u-script" type="text/javascript" src="javascript/common/coreAPIcalls.js" defer=""></script>
+  <script class="u-script" type="text/javascript" src="javascript/common/indexedDB.js" defer=""></script>
   <script class=" u-script" type="text/javascript" src="javascript/LongStreaks.js" "="" defer=""></script>
   <script class=" u-script" type="text/javascript" src="javascript/header.js" defer=""></script>
   <meta name=" generator" content="Nicepage 4.16.0, nicepage.com">
