--- a/TeamStrategiesHistoricStats.html
+++ b/TeamStrategiesHistoricStats.html
@@ -1,6 +1,48 @@
 <!DOCTYPE html>
 <html style="font-size: 16px;" lang="en">
 
+<style>
+  /* Style for the loading overlay */
+#loading {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent white background */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000; /* Ensure it is on top of all content */
+}
+
+/* Loader animation */
+.loader {
+    border: 12px solid #f3f3f3; /* Light gray */
+    border-top: 12px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    animation: spin 2s linear infinite;
+}
+
+/* Spin animation */
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+/* Initially, hide the loading element */
+#loading.hidden {
+    display: none;
+}
+
+</style>
+
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
@@ -15,6 +57,7 @@
   <script class=" u-script" type="text/javascript" src="javascript/common/constants.js"></script>
   <script class=" u-script" type="text/javascript" src="javascript/common/sortTables.js"></script>
   <script class="u-script" type="text/javascript" src="javascript/common/coreAPIcalls.js" defer=""></script>
+  <script class="u-script" type="text/javascript" src="javascript/common/indexedDB.js" defer=""></script>
   <script class=" u-script" type="text/javascript" src="javascript/TeamStrategiesHistoricStats.js" "="" defer=""></script>
   <script class="u-script" type="text/javascript" src="javascript/header.js" defer=""></script>
   <meta name=" generator" content="Nicepage 4.16.0, nicepage.com">
@@ -37,6 +80,9 @@
   <meta property="og:type" content="website">
 </head>
 
+<div id="loading" class="hidden">
+  <div class="loader"></div>
+</div>
 <body class="u-body u-overlap u-xl-mode" data-lang="en">
   <header class="u-clearfix u-header u-sticky u-header" id="sec-3764">
     <div class="u-clearfix u-sheet u-sheet-1" id="header-sec">
