add new strats winFirstHalf

--- a/TeamStrategiesHistoricStats.html
+++ b/TeamStrategiesHistoricStats.html
@@ -129,6 +129,8 @@
               <option value="SecondHalfBigger">More goals in second half</option>
               <option value="WinAndGoals">Win && +2.5 goals</option>
               <option value="WinBothHalves">Win both halves</option>
+              <option value="WinFirstHalf">HT Win</option>
+              <option value="NoWinFirstHalf">No HT Win</option>
             </select>
           </div>
           <div class="u-align-center u-form-group u-form-submit">
