select season on all matches pages

--- a/OD-All-Matches.html
+++ b/OD-All-Matches.html
@@ -1,6 +1,87 @@
 <!DOCTYPE html>
 <html style="font-size: 16px;" lang="en">
-
+  <style>
+    .subnav {
+      float: left;
+      overflow: hidden;
+    }
+  
+    .subnav .subnavbtn {
+      font-size: 16px;
+      border: none;
+      outline: none;
+      color: white;
+      padding: 14px 16px;
+      background-color: inherit;
+      font-family: inherit;
+      margin: 0;
+    }
+  
+    .subnav-content {
+      display: none;
+      position: absolute;
+      left: 0;
+      background-color: red;
+      width: 100%;
+      z-index: 1;
+    }
+  
+    .subnav-content a {
+      float: left;
+      color: white;
+      text-decoration: none;
+    }
+  
+    .subnav-content a:hover {
+      background-color: #eee;
+      color: black;
+    }
+  
+    .subnav:hover .subnav-content {
+      display: block;
+    }
+    
+  /* Style for the loading overlay */
+  #loading {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent white background */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 1000; /* Ensure it is on top of all content */
+  }
+  
+  /* Loader animation */
+  .loader {
+      border: 12px solid #f3f3f3; /* Light gray */
+      border-top: 12px solid #3498db; /* Blue */
+      border-radius: 50%;
+      width: 60px;
+      height: 60px;
+      animation: spin 2s linear infinite;
+  }
+  
+  /* Spin animation */
+  @keyframes spin {
+      0% {
+          transform: rotate(0deg);
+      }
+      100% {
+          transform: rotate(360deg);
+      }
+  }
+  
+  /* Initially, hide the loading element */
+  #loading.hidden {
+      display: none;
+  }
+  
+  
+  </style>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
@@ -14,6 +95,7 @@
   <script class=" u-script" type="text/javascript" src="javascript/nicepage.js" "="" defer=""></script>
   <script class=" u-script" type="text/javascript" src="javascript/common/constants.js"></script>
   <script class=" u-script" type="text/javascript" src="javascript/common/sortTables.js"></script>
+  <script class="u-script" type="text/javascript" src="javascript/common/indexedDB.js" defer=""></script>
   <script class="u-script" type="text/javascript" src="javascript/header.js" defer=""></script>
   <script type="text/javascript">
     var currentStrategy = ONLY_DRAWS_ID;
@@ -50,6 +132,9 @@
   <meta property="og:type" content="website">
 </head>
 
+<div id="loading" class="hidden">
+  <div class="loader"></div>
+</div>
 <body class="u-body u-overlap u-xl-mode" data-lang="en">
   <header class="u-clearfix u-header u-sticky u-header" id="sec-3764">
     <div class="u-clearfix u-sheet u-sheet-1" id="header-sec">
@@ -75,6 +160,19 @@
       <h4 class="u-text u-text-default u-text-1" style="text-shadow: none;"><b>ONLY DRAWS - List of all matches
           played</b></h4>
       <!-- <h3 class="u-text u-text-default u-text-1">Team Name</h3> -->
+      <form action="#" style="text-align: center; margin-top: 4%; margin-bottom: 4%;">
+        <label for="lang">Select Season</label>
+        <select id="seasonSelect">
+          <option selected="selected" value="all">All</option>
+          <option value="2021">2021</option>
+          <option value="2021-22">2021/22</option>
+          <option value="2022">2022</option>
+          <option value="2022-23">2022/23</option>
+          <option value="2023">2023</option>
+          <option value="2023-24">2023/24</option>
+          <option value="2024-25">2024/25</option>
+        </select>
+      </form>
       <div class="u-table u-table-responsive u-table-1" style="margin-top: 30px;">
         <table class="u-table-entity" id="odMatchesTable">
           <colgroup>
