add winsMarginHome strategy

--- a/HistoricStatsData.html
+++ b/HistoricStatsData.html
@@ -192,6 +192,7 @@
                 <option value="Draw">Draw</option>
                 <option value="GoalsFest">btts && +2.5 goals</option>
                 <option value="WinsMargin">Margin wins by 1/2 two goals</option>
+                <option value="WinsMarginHome">Margin wins by 1/2 two goals (home only)</option>
                 <option value="CleanSheet">Clean sheet</option>
                 <option value="ConcedeBothHalves">Concede goals in both halves</option>
                 <option value="EuroHandicap">Margin wins by exactly 1 goal</option>
