add new FirstHalfBigger strategy

--- a/HistoricStatsData.html
+++ b/HistoricStatsData.html
@@ -189,6 +189,7 @@
             <select id="strategySelect" name="strategy" class="u-border-1 u-border-grey-30 u-custom-font u-font-source-sans-pro u-input u-input-rectangle u-radius-29 u-white u-input-1" required="required">
                 <option value=""></option>
                 <option value="Btts">Both teams to score</option>
+                <option value="BttsOneHalf">Both teams to score in one half</option>
                 <option value="Draw">Draw</option>
                 <option value="GoalsFest">btts && +2.5 goals</option>
                 <option value="WinsMargin">Margin wins by 1/2 two goals</option>
@@ -202,6 +203,7 @@
                 <option value="NoWins">No Wins</option>
                 <option value="ScoreBothHalves">Score goals in both halves</option>
                 <option value="SecondHalfBigger">More goals in second half</option>
+                <option value="FirstHalfBigger">More goals in first half</option>
                 <option value="WinAndGoals">Win && +2.5 goals</option>
                 <option value="WinBothHalves">Win both halves</option>
                 <option value="WinFirstHalf">HT Win</option>
