--- a/LongStreaks.html
+++ b/LongStreaks.html
@@ -291,6 +291,13 @@
         </li>
         <li style="display: inline-block; margin-right: 10px;">
           <div class="u-align-center u-form-group u-form-submit">
+            <a onclick="changeHeadCell('No 1HT > 2HT')"
+              class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-custom-font u-font-source-sans-pro u-palette-3-dark-2 u-radius-18 u-btn-1">No 1HT > 2HT</a>
+            <input type="submit" value="submit" class="u-form-control-hidden">
+          </div>
+        </li>
+        <li style="display: inline-block; margin-right: 10px;">
+          <div class="u-align-center u-form-group u-form-submit">
             <a onclick="changeHeadCell('Win 1HT')"
               class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-custom-font u-font-source-sans-pro u-palette-3-dark-2 u-radius-18 u-btn-1">Win 1HT</a>
             <input type="submit" value="submit" class="u-form-control-hidden">
