--- a/Simulation-Matches.html
+++ b/Simulation-Matches.html
@@ -145,6 +145,7 @@
               <option value="NoWins">No Wins</option>
               <option value="ScoreBothHalves">Score goals in both halves</option>
               <option value="SecondHalfBigger">More goals in second half</option>
+              <option value="FirstHalfBigger">More goals in first half</option>
               <option value="WinAndGoals">Win && +2.5 goals</option>
               <option value="WinBothHalves">Win both halves</option>
             </select>
